# halo

./: .gitignore  LICENSE  README.md
.next/: trace
.next/cache/: .rscinfo
app/: .gitignore  package-lock.json  package.json
app/mobile/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
app/mobile/core/utils/: api.ts
app/mobile/src/: events.tsx
app/mobile/src/components/: event-card.tsx
app/mobile/src/components/buttons/: button.tsx
app/mobile/src/screens/: events.tsx  profile.tsx
app/mobile/src/services/: api.ts
app/mobile/src/types/: types.ts
app/src/: events.tsx
app/src/app/: page.tsx
app/web/: package-lock.json  package.json
app/web/src/app/: globals.css  page.tsx
app/web/src/styles/: fonts.css
core/: Cargo.toml
core/alpha/: Cargo.toml
core/iota/: Cargo.toml
core/mu/: Cargo.toml
core/mu/src/: lib.rs  matching.rs
core/omicron/: Cargo.toml
core/omicron/src/: internal.rs  lib.rs  main.rs  public.rs  types.rs  users.rs
core/omicron/src/auth/: handlers.rs
core/omicron/src/models/: event.rs  ticket.rs
core/src/: main.rs
data/migrations/: 20240825213922_create_users_table.psql
web/: tailwind.config.ts
web/.next/server/: server-reference-manifest.js  server-reference-manifest.json
web/src/app/: page.tsx
